--- a/CW-Brain-Age-Regression.ipynb
+++ b/CW-Brain-Age-Regression.ipynb
@@ -21,7 +21,6 @@
     "colab": {
       "name": "CW-Brain-Age-Regression.ipynb",
       "provenance": [],
-      "toc_visible": true,
       "machine_shape": "hm",
       "include_colab_link": true
     },
@@ -585,8 +584,8 @@
       "source": [
         "rnd_seed = 42 #fixed random seed\n",
         "\n",
-        "img_size = [64, 64, 64]\n",
-        "img_spacing = [3, 3, 3]\n",
+        "img_size = [96, 96, 96]\n",
+        "img_spacing = [2, 2, 2]\n",
         "\n",
         "num_epochs = 100\n",
         "learning_rate = 0.0005\n",
@@ -730,11 +729,11 @@
         "\n",
         "    def __init__(self, num_classes):\n",
         "        super(SimpleNet3D, self).__init__()\n",
-        "        self.conv1 = nn.Conv3d(1, 128, kernel_size=3, padding=1)\n",
-        "        self.conv2 = nn.Conv3d(128, 64, kernel_size=3, padding=1)\n",
+        "        self.conv1 = nn.Conv3d(1, 64, kernel_size=3, padding=1)\n",
+        "        self.conv2 = nn.Conv3d(64, 32, kernel_size=3, padding=1)\n",
         "        self.drop1 = nn.Dropout(p=0.2)\n",
-        "        self.conv3 = nn.Conv3d(64, 32, kernel_size=3, padding=1)\n",
-        "        self.conv4 = nn.Conv3d(32, num_classes, kernel_size=3, padding=1)\n",
+        "        self.conv3 = nn.Conv3d(32, 16, kernel_size=3, padding=1)\n",
+        "        self.conv4 = nn.Conv3d(16, num_classes, kernel_size=3, padding=1)\n",
         "\n",
         "    def forward(self, x):\n",
         "        x = F.relu(self.conv1(x))\n",
@@ -1522,11 +1521,22 @@
         "\n",
         "meta_data_reg_train = pd.read_csv(data_dir + 'meta/meta_data_reg_train.csv')\n",
         "ids_reg_gm_train = list(meta_data_reg_train['subject_id'])\n",
+        "\n",
+        "meta_data_reg_test = pd.read_csv('meta_data_reg_test.csv')\n",
+        "ids_reg_gm_test = list(meta_data_reg_test['subject_id'])\n",
+        "\n",
         "greymatter_dir = data_dir + 'greymatter/wc1sub-'\n",
-        "greymatter_files = [greymatter_dir + f + '_T1w.nii.gz' for f in ids_reg_train]\n",
-        "greymatters = [sitk.ReadImage(greymatter_file) for greymatter_file in greymatter_files]\n",
-        "display_image(greymatters[0])\n",
-        "img_data = np.array([sitk.GetArrayFromImage(greymatter) for greymatter in greymatters])"
+        "greymatter_train_files = [greymatter_dir + f + '_T1w.nii.gz' for f in ids_reg_gm_train]\n",
+        "greymatters_train = [sitk.ReadImage(greymatter_train_file) for greymatter_train_file in greymatter_train_files]\n",
+        "display_image(greymatters_train[0])\n",
+        "\n",
+        "greymatter_test_files = [greymatter_dir + f + '_T1w.nii.gz' for f in ids_reg_gm_test]\n",
+        "greymatters_test = [sitk.ReadImage(greymatter_test_file) for greymatter_test_file in greymatter_test_files]\n",
+        "display_image(greymatters_test[0])\n",
+        "\n",
+        "\n",
+        "img_data_train = np.array([sitk.GetArrayFromImage(greymatter) for greymatter in greymatters_train])\n",
+        "img_data_test = np.array([sitk.GetArrayFromImage(greymatter) for greymatter in greymatters_test])"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1539,10 +1549,16 @@
         "colab": {}
       },
       "source": [
-        "X = img_data\n",
+        "X = img_data_train\n",
         "y = meta_data_reg_train['age'].values.reshape(-1,1)\n",
         "\n",
-        "print(img_size)\n",
+        "test_X = img_data_test\n",
+        "test_y = meta_data_reg_test['age'].values.reshape(-1, 1)\n",
+        "\n",
+        "print(test_X.shape)\n",
+        "print(test_y.shape)\n",
+        "\n",
+        "# print(img_size)\n",
         "print(X.shape)\n",
         "print(y.shape)"
       ],
@@ -1579,7 +1595,7 @@
         "        # Note how the blurring strength can be different in each direction,\n",
         "        # if the scaling factors are different.\n",
         "        factor = new_spacing[d] / old_spacing[d]\n",
-        "        sigma = 0.2 * factor\n",
+        "        sigma = 0.5 * factor\n",
         "        img_smoothed = sitk.RecursiveGaussian(img_smoothed, sigma=sigma, direction=d)\n",
         "\n",
         "    # Finally, apply the resampling operation\n",
@@ -1599,22 +1615,12 @@
         "    img_resampled = zero_mean_unit_var(img_resampled, img_resampled)\n",
         "    return img_resampled\n",
         "\n",
-        "img_resampled = [resample(greymatter, new_spacing=[5, 5, 5]) for greymatter in greymatters]\n",
-        "\n",
-        "display_image(img_resampled[0])"
+        "img_resampled_train = [resample(greymatter, new_spacing=[5, 5, 7]) for greymatter in greymatters_train]\n",
+        "img_resampled_test = [resample(greymatter, new_spacing=[5, 5, 7]) for greymatter in greymatters_test]\n",
+        "display_image(img_resampled_train[0])"
       ],
       "execution_count": 0,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "oc0PgCKKVunD",
-        "colab_type": "text"
-      },
-      "source": [
-        ""
-      ]
     },
     {
       "cell_type": "markdown",
@@ -1643,19 +1649,48 @@
         "########################################\n",
         "from sklearn.decomposition import PCA\n",
         "from sklearn.utils import shuffle\n",
+        "from sklearn.model_selection import train_test_split\n",
         "\n",
-        "\n",
-        "def perform_PCA(_X, _y):\n",
-        "  __X, __y = shuffle(_X, _y)\n",
-        "\n",
-        "  train_X, test_X, train_y, test_y = train_test_split(__X.reshape(__X.shape[0], -1),  __y.ravel(), test_size = 0.5)\n",
+        "def perform_PCA(train_X, test_X):\n",
+        "  print(train_X.shape)\n",
         "  pca = PCA(n_components=0.95)\n",
         "  pca.fit(train_X)\n",
-        "  \n",
+        "\n",
         "  train_X = pca.transform(train_X)\n",
         "  test_X = pca.transform(test_X)\n",
+        "  return train_X, test_X \n",
         "\n",
-        "  return train_X, test_X, train_y, test_y"
+        "# def perform_PCA(_X, _y):\n",
+        "#   __X, __y = shuffle(_X, _y, random_state=6)\n",
+        " \n",
+        "#   train_X, val_X, train_y, val_y = train_test_split(__X.reshape(__X.shape[0], -1),  __y.ravel(), test_size = 0.5, random_state=rnd_seed)\n",
+        "#   pca = PCA(n_components=0.95)\n",
+        "#   pca.fit(train_X)\n",
+        "  \n",
+        "#   train_X = pca.transform(train_X)\n",
+        "#   val_X = pca.transform(val_X)\n",
+        "\n",
+        "#   return train_X, val_X, train_y, val_y\n",
+        "\n",
+        "# def perform_PCA_test(_X, _y):\n",
+        "#   pca = PCA(n_components=0.95)\n",
+        "#   _X = _X.reshape(_X.shape[0], -1)\n",
+        "#   pca.fit(_X)\n",
+        "#   test_y = _y.ravel()\n",
+        "#   test_X = pca.transform(_X)\n",
+        "#   return test_X, test_y\n",
+        "\n",
+        "\n",
+        "# def perform_PCA(_X, _y):\n",
+        "#   __X, __y = shuffle(_X, _y, random_state=1)\n",
+        " \n",
+        "#   __X = __X.reshape(__X.shape[0], -1)\n",
+        "#   __y = __y.ravel()\n",
+        "#   # pca.fit(__X)\n",
+        "  \n",
+        "#   # __X = pca.transform(__X)\n",
+        "\n",
+        "#   return __X, __y\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1691,9 +1726,17 @@
         "from sklearn.svm import SVR\n",
         "from sklearn.metrics import mean_absolute_error, r2_score\n",
         "\n",
-        "np_img_resampled = np.array([sitk.GetArrayFromImage(x) for x in img_resampled])\n",
+        "np_img_resampled = np.array([sitk.GetArrayFromImage(x) for x in img_resampled_train])\n",
+        "np_img_resampled_test = np.array([sitk.GetArrayFromImage(x) for x in img_resampled_test])\n",
         "\n",
-        "train_X, test_X, train_y, test_y = perform_PCA(np_img_resampled, y)\n",
+        "np_img_resampled = np_img_resampled.reshape(np_img_resampled.shape[0], -1)\n",
+        "np_img_resampled_test = np_img_resampled_test.reshape(np_img_resampled_test.shape[0], -1)\n",
+        "\n",
+        "img_data_train = img_data_train.reshape(img_data_train.shape[0], -1)\n",
+        "img_data_test = img_data_test.reshape(img_data_test.shape[0], -1)\n",
+        "train_X, test_X = perform_PCA(np_img_resampled, np_img_resampled_test)\n",
+        "train_y = y.ravel()\n",
+        "test_y = test_y.ravel()\n",
         "\n",
         "predictions = []\n",
         "\n",
