--- a/CW-Brain-Age-Regression.ipynb
+++ b/CW-Brain-Age-Regression.ipynb
@@ -145,11 +145,11 @@
       "metadata": {
         "id": "7tiar_VpzghV",
         "colab_type": "code",
+        "outputId": "4defc306-c7c9-449a-a53e-89cf5aff1938",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        },
-        "outputId": "4defc306-c7c9-449a-a53e-89cf5aff1938"
+        }
       },
       "source": [
         "# Read the meta data using pandas\n",
@@ -160,7 +160,7 @@
         "meta_data_all = pd.read_csv(data_dir + 'meta/meta_data_all.csv')\n",
         "meta_data_all.head() # show the first five data entries"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -262,11 +262,11 @@
         "scrolled": false,
         "id": "3iNb8Wunzgha",
         "colab_type": "code",
+        "outputId": "4315e1c0-5c99-486f-d94a-395c85c62b44",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 924
-        },
-        "outputId": "4315e1c0-5c99-486f-d94a-395c85c62b44"
+        }
       },
       "source": [
         "%matplotlib inline\n",
@@ -292,7 +292,7 @@
         "plt.ylabel('Age')\n",
         "plt.show()"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -437,11 +437,11 @@
       "metadata": {
         "id": "nTjD2ozSzghl",
         "colab_type": "code",
+        "outputId": "e9f7fe47-028e-4c91-edd6-3dd1e75c09f2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 792
-        },
-        "outputId": "e9f7fe47-028e-4c91-edd6-3dd1e75c09f2"
+        }
       },
       "source": [
         "# Subject with index 0\n",
@@ -471,7 +471,7 @@
         "print('Spatially normalised grey matter maps (used in part B and C)')\n",
         "display_image(gm)"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -877,11 +877,11 @@
       "metadata": {
         "id": "XSIKyPGAzgiK",
         "colab_type": "code",
+        "outputId": "4a4a5922-7e06-4fbf-d6e0-0a477fa9dea3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 665
-        },
-        "outputId": "4a4a5922-7e06-4fbf-d6e0-0a477fa9dea3"
+        }
       },
       "source": [
         "sample = dataset_train.get_sample(0)\n",
@@ -894,7 +894,7 @@
         "print('Mask')\n",
         "display_image(sample['msk'])"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1203,11 +1203,11 @@
       "metadata": {
         "id": "x19wKK0lzgid",
         "colab_type": "code",
+        "outputId": "9bef18de-27b0-436f-f67e-48bd88cd2290",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 665
-        },
-        "outputId": "9bef18de-27b0-436f-f67e-48bd88cd2290"
+        }
       },
       "source": [
         "sample = dataset_test.get_sample(0)\n",
@@ -1220,7 +1220,7 @@
         "print('Mask')\n",
         "display_image(sample['msk'])"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1322,11 +1322,11 @@
         "scrolled": true,
         "id": "ty6ctX9azgih",
         "colab_type": "code",
+        "outputId": "fb0db463-1419-4df2-eb78-1f33db122f1f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 890
-        },
-        "outputId": "fb0db463-1419-4df2-eb78-1f33db122f1f"
+        }
       },
       "source": [
         "print('START TESTING...')\n",
@@ -1399,7 +1399,7 @@
         "ax3.set_title('WM Dice Score')\n",
         "print('\\nFinished TESTING.')"
       ],
-      "execution_count": 19,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1480,11 +1480,11 @@
       "metadata": {
         "id": "LEKzPZNimrbE",
         "colab_type": "code",
+        "outputId": "75d33723-babf-4fca-b0ee-8bcd9f461d6a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 890
-        },
-        "outputId": "75d33723-babf-4fca-b0ee-8bcd9f461d6a"
+        }
       },
       "source": [
         "print('START TESTING with training dataset...')\n",
@@ -1557,7 +1557,7 @@
         "ax3.set_title('WM Dice Score')\n",
         "print('\\nFinished TESTING.')"
       ],
-      "execution_count": 20,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1715,11 +1715,11 @@
       "metadata": {
         "id": "jfYYhrDwzgip",
         "colab_type": "code",
+        "outputId": "c9b21018-b4ad-422e-8931-89cd026ed4c6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
-        },
-        "outputId": "c9b21018-b4ad-422e-8931-89cd026ed4c6"
+        }
       },
       "source": [
         "plt.scatter(vols[0,:],meta_data_reg_train['age'], marker='.')\n",
@@ -1732,7 +1732,7 @@
         "plt.legend(('CSF','GM','WM'))\n",
         "plt.show()"
       ],
-      "execution_count": 23,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1785,11 +1785,11 @@
       "metadata": {
         "id": "9vueCR1nzgiv",
         "colab_type": "code",
+        "outputId": "9acdf4c0-b427-47c7-8027-be5104b88d71",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
-        },
-        "outputId": "9acdf4c0-b427-47c7-8027-be5104b88d71"
+        }
       },
       "source": [
         "plt.scatter(vols_normalised[0,:],meta_data_reg_train['age'], marker='.')\n",
@@ -1802,7 +1802,7 @@
         "plt.legend(('CSF','GM','WM'))\n",
         "plt.show()"
       ],
-      "execution_count": 25,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1833,11 +1833,11 @@
       "metadata": {
         "id": "t_L6WPYbzgiz",
         "colab_type": "code",
+        "outputId": "3485197a-de5a-426c-d011-aa46e6ab3031",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "3485197a-de5a-426c-d011-aa46e6ab3031"
+        }
       },
       "source": [
         "X = vols_normalised.T\n",
@@ -1846,7 +1846,7 @@
         "print(X.shape)\n",
         "print(y.shape)"
       ],
-      "execution_count": 26,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1962,16 +1962,16 @@
       "metadata": {
         "id": "mdcSFMShRZfa",
         "colab_type": "code",
+        "outputId": "8fde8b47-f641-465c-8374-3db0aad56e58",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 309
-        },
-        "outputId": "8fde8b47-f641-465c-8374-3db0aad56e58"
+        }
       },
       "source": [
         "plot_graph_regression(train_X, train_y.ravel(), val_X, val_y)"
       ],
-      "execution_count": 29,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2002,11 +2002,11 @@
       "metadata": {
         "id": "JJuaknQQRtKc",
         "colab_type": "code",
+        "outputId": "61ee8ee0-bd01-4fb3-dc69-18d1beb72e6a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 326
-        },
-        "outputId": "61ee8ee0-bd01-4fb3-dc69-18d1beb72e6a"
+        }
       },
       "source": [
         "vols_test, files_reg_seg_test = compute_features('meta_data_reg_test.csv')\n",
@@ -2021,7 +2021,7 @@
         "\n",
         "plot_graph_regression(X, y.ravel(), test_X, test_y)"
       ],
-      "execution_count": 30,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2077,11 +2077,11 @@
       "metadata": {
         "id": "Gs4Z1skXzgjD",
         "colab_type": "code",
+        "outputId": "6a95db14-2ffa-4730-8ceb-4952d2de0af7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 481
-        },
-        "outputId": "6a95db14-2ffa-4730-8ceb-4952d2de0af7"
+        }
       },
       "source": [
         "########################################\n",
@@ -2110,7 +2110,7 @@
         "img_data_train = np.array([sitk.GetArrayFromImage(greymatter) for greymatter in greymatters_train])\n",
         "img_data_test = np.array([sitk.GetArrayFromImage(greymatter) for greymatter in greymatters_test])"
       ],
-      "execution_count": 32,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2143,11 +2143,11 @@
       "metadata": {
         "id": "WLWGs-8JzgjH",
         "colab_type": "code",
+        "outputId": "c0adb0f3-2ff7-43a9-95e6-e95e222da1db",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
-        },
-        "outputId": "c0adb0f3-2ff7-43a9-95e6-e95e222da1db"
+        }
       },
       "source": [
         "X = img_data_train\n",
@@ -2163,7 +2163,7 @@
         "print(X.shape)\n",
         "print(y.shape)"
       ],
-      "execution_count": 33,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2182,11 +2182,11 @@
       "metadata": {
         "id": "3bDpAAP1a3pN",
         "colab_type": "code",
+        "outputId": "f9d0324f-0aa5-4edd-8c25-17fc786eaada",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 252
-        },
-        "outputId": "f9d0324f-0aa5-4edd-8c25-17fc786eaada"
+        }
       },
       "source": [
         "# Pre-processing\n",
@@ -2235,7 +2235,7 @@
         "img_resampled_test = [resample(greymatter, new_spacing=[5, 5, 7]) for greymatter in greymatters_test]\n",
         "display_image(img_resampled_train[0])"
       ],
-      "execution_count": 34,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2313,11 +2313,11 @@
       "metadata": {
         "id": "fZaakOmuzgjO",
         "colab_type": "code",
+        "outputId": "42898ea4-5dd5-46ef-aa1a-4766a4259dc7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 102
-        },
-        "outputId": "42898ea4-5dd5-46ef-aa1a-4766a4259dc7"
+        }
       },
       "source": [
         "########################################\n",
@@ -2373,7 +2373,7 @@
         "r2_br  = r2_score(test_y, predictions[3])\n",
         "print(f'Bayesian Regression: mean absolute error: {mae_br}, r2 score: {r2_br}')"
       ],
-      "execution_count": 36,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2403,11 +2403,11 @@
       "metadata": {
         "id": "NqfUGxXDzgjR",
         "colab_type": "code",
+        "outputId": "35aa3bbb-f489-44e7-e7d1-9adb487bd235",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 241
-        },
-        "outputId": "35aa3bbb-f489-44e7-e7d1-9adb487bd235"
+        }
       },
       "source": [
         "fig, ax = plt.subplots(1, 4, figsize=(16, 3), sharey=True)\n",
@@ -2420,7 +2420,7 @@
         "  ax[i].set_title(methods[i])\n",
         "plt.show()"
       ],
-      "execution_count": 41,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2772,7 +2772,7 @@
         "    dataloader_train = torch.utils.data.DataLoader(dataset_train, batch_size=batch_size)\n",
         "\n",
         "    dataset_test = ImageRegressionDataset(test_img, test_age, img_spacing, img_size)\n",
-        "    dataloader_test = torch.utils.data.DataLoader(dataset_train, batch_size=batch_size)\n",
+        "    dataloader_test = torch.utils.data.DataLoader(dataset_test, batch_size=batch_size)\n",
         "\n",
         "    model.cuda()\n",
         "    model.train()\n",
