--- a/CW-Brain-Age-Regression.ipynb
+++ b/CW-Brain-Age-Regression.ipynb
@@ -2333,8 +2333,6 @@
         "np_img_resampled = np_img_resampled.reshape(np_img_resampled.shape[0], -1)\n",
         "np_img_resampled_test = np_img_resampled_test.reshape(np_img_resampled_test.shape[0], -1)\n",
         "\n",
-        "img_data_train = img_data_train.reshape(img_data_train.shape[0], -1)\n",
-        "img_data_test = img_data_test.reshape(img_data_test.shape[0], -1)\n",
         "train_X, test_X = perform_PCA(np_img_resampled, np_img_resampled_test)\n",
         "train_y = y.ravel()\n",
         "test_y = test_y.ravel()\n",
@@ -2636,7 +2634,7 @@
         "\n",
         "num_epochs = 100\n",
         "learning_rate = 1e-4\n",
-        "batch_size = 6\n",
+        "batch_size = 2\n",
         "val_interval = 10\n",
         "\n",
         "out_dir = './output'\n",
@@ -2686,43 +2684,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rcTZfYDZuFE6",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "sample = dataset_train.get_sample(0)\n",
-        "img_name = dataset_train.get_img_name(0)\n",
-        "print('Image: ' + img_name)\n",
-        "display_image(sample['img'], window=5, level=0)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "rHDrf4giuWxT",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "class Print(nn.Module):\n",
-        "    def __init__(self):\n",
-        "        super(Print, self).__init__()\n",
-        "    \n",
-        "    def forward(self, x):\n",
-        "        # Do your print / debug stuff here\n",
-        "        print(x.shape)\n",
-        "        return x\n",
-        "\n",
         "class LeNet(nn.Module):\n",
         "    def __init__(self):\n",
         "        super(LeNet, self).__init__()\n",
-        "        # Make the above architecture of LeNet.\n",
-        "        # bias=True makes the layer create a bias internally. Nice and clean.\n",
-        "        # Conv2d gets args: (num input channs, num out channs, kernel_size ...)\n",
-        "        # Linear gets args: (num input neurons, num out neurons, ...)\n",
         "        self.layer1 = nn.Sequential(nn.Conv3d(1, 6, kernel_size = 5, bias=True),\n",
         "                                    nn.BatchNorm3d(6),\n",
         "                                    nn.ReLU(True),\n",
@@ -2743,13 +2712,9 @@
         "        self.fc3 = nn.Linear(84, 1, bias=True)\n",
         "    \n",
         "    def forward(self, x):\n",
-        "        # x: Input tensor (batch of images) of shape [N, Channels, H, W]\n",
-        "        # returns: tensor of shape [N, classes]. The class posterior probabilities.\n",
-        "        # Make the forward pass.\n",
         "        x = self.layer1(x)\n",
         "        x = self.layer2(x)\n",
         "        x = self.layer3(x)\n",
-        "        # print(x.shape)\n",
         "        x = x.reshape(x.shape[0], -1)\n",
         "        x = F.relu(self.fc1(x))\n",
         "        x = F.relu(self.fc2(x))\n",
@@ -2839,19 +2804,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "1FwQg06Z5Eox",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "torch.save(model.state_dict(), 'model_reg.pt')"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "DzHbEcnQ2aqZ",
         "colab_type": "code",
         "colab": {}
@@ -2878,6 +2830,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bGxRAOqqmSjx",
+        "colab_type": "text"
+      },
+      "source": [
+        "Testing on test dataset"
+      ]
     },
     {
       "cell_type": "code",
@@ -2953,6 +2915,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "RhJcNV84mOt3",
+        "colab_type": "text"
+      },
+      "source": [
+        "Grid Search"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "sNztR3a_8CWP",
@@ -2961,6 +2933,7 @@
       },
       "source": [
         "from sklearn.model_selection import ParameterGrid\n",
+        "from sklearn.metrics import mean_absolute_error, r2_score\n",
         "\n",
         "num_epochs = [20, 50, 100]\n",
         "learning_rate = [5e-5, 1e-4]\n",
